# ValuePilot

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  discovery.json  extracting_spec.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a2b3c4d5e6f_metric_facts_period_type_text.py  20260117034130-initial_schema.py  20260206120000-add_user_auth_fields.py  20260422093000-add_pdf_documents_report_date.py  20260423000000-add_13f_ingestion_tables.py  20260423120000-widen_cusip_ticker_map_source.py  20260506100000-add_stock_market_country.py  20260506120000-add_13f_admin_job_runs.py  20260506123000-add_13f_job_worker_heartbeats.py  20260506124500-add_manager_cik_audit_fields.py  20260506130000-add_13f_quality_reports.py  20260506131500-add_manager_cik_review_events.py  20260507020000-add_job_runs_active_lock_key_index.py  20260509120000-13f_mvp1a_schema_foundation.py  20260509140000-13f_mvp1b_schema.py  (+8 more)
backend/app/: main.py
backend/app/api/: deps.py
backend/docs/: parser_design.md
backend/extracted/: bud.json
backend/scripts/: audit_metric_taxonomy_coverage.py  backfill_13f_period_prices.py  backfill_owners_earnings_fact_nature.py  backfill_rates_cagr_fact_nature.py  dedupe_documents.py  diff_outputs.py  fields_extracting.py  json_diff.py  migrate_user_1.py  run_discovery.py  run_extraction.py  seed_13f_dev_fixture.py  value_line_dump.py
backend/spec_history/: 2026-01-20_extracting_spec.json
backend/tests/: conftest.py  test_discovery.py  test_extraction.py  test_regression.py
(+698 files in other folders)
