[project]
name = "value-pilot-backend"
version = "0.1.0"
description = "Financial Analysis Engine"
authors = [{name = "ValuePilot Team", email = "dev@valuepilot.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
    "pdfplumber>=0.10.0",
    "pyyaml>=6.0.1",
    "pytest>=7.4.4",
    "email-validator>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "typer>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
